Fixing tests and cleaning project of unnecessary files
